# gRPC-Chat-Server

./: CMakeLists.txt
ormpp/: ormpp.cmake
src/: api_chat.proto  authenticator.cpp  authenticator.h  chat_api.cpp  chat_api.h  chat_api_chat_fetch.cpp  chat_api_login.cpp  chat_api_message_fetch.cpp  chat_api_message_send.cpp  chat_manager.cpp  chat_manager.h  db.cpp  script.sql  server.cpp  server_old.cpp  simple_chat_api.h  simple_chat_api_message_fetch.cpp  simple_chat_api_message_send.cpp  user_manager.cpp  user_manager.h
src/api/: api_chat.proto  chat_api.h  chat_api_account.cpp  chat_api_chat_fetch.cpp  chat_api_chat_manage.cpp  chat_api_friend.cpp  chat_api_login.cpp  chat_api_message_fetch.cpp  chat_api_message_send.cpp
src/database/: database.cpp  database.h  mysql_helper.cpp  mysql_helper.h
src/logic/: chat_manager.cpp  chat_manager.h  user_manager.cpp  user_manager.h
